--- a/src/css/aboutme.css
+++ b/src/css/aboutme.css
@@ -1,44 +1,81 @@
 /* ABOUT ME */
 .about {
-    width : 100%;
-    height: 1100px;
+    width: 100%;
+    height: 1200px;
     background-color: black;
     color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
-u {
+.rayita-aboutme {
     color: yellow;
 }
 
 .caja {
-    width: 1300px;
-    height: 100vh;
-    display: flex;
-    align-items: center;
     /* background-color: blue; */
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        flex-flow: wrap;
+
 }
 
 .about2 {
-    display: flex;
-    width: auto;
-    height: auto;
-    background-color: black;
-    margin: 0% 6% 0% 6% ;
+    
+    /* width: 500px;
+    height: 400px; */
+    width: 40%;
+    height: 400px;
+    /* background-color: yellow; */
+    margin: 20px 5px 20px 5px;
+    box-sizing: border-box;
+
 }
 
 .about3 {
-    height: auto;
-    width: 600px;
+    height: 400px;
+    width: 40%;
     /* background-color: tomato; */
-    margin: 0% 6% 0% 0% ;
+    /* margin: 0% 6% 0% 0% ; */
+    box-sizing: border-box;
+    padding: 40px 0px 20px 0px;
 }
+
+@media screen and (max-width:1400px){
+    .about2, .about3{
+        width:40%;
+    }
+}
+
+@media screen and (max-width:1000px){
+    .about2, .about3{
+        width:60%;
+    }
+}
+
+@media screen and (max-width:800px){
+    .about2, .about3{
+        width:70%;
+    }
+}
+
+@media screen and (max-width:600px){
+    .about2, .about3{
+        width:90%;
+    }
+}
+
 .foto2 {
-    width: 450px;
-    height: 300px;
+    width: 100%;
+    height: 100%;
+    border-radius: 20%;
 }
+
+/* .foto2:hover{
+    transform: translateY(-50px);
+    width: 500px;
+    height: 350px;
+    transition: 1.5s;
+} */
 
 .about3 h1 {
     color: white;
