--- a/src/css/aboutme.css
+++ b/src/css/aboutme.css
@@ -1,9 +1,12 @@
 /* ABOUT ME */
 .about {
     width: 100%;
-    height: 1200px;
+    height: 900px;
     background-color: black;
     color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .rayita-aboutme {
@@ -16,16 +19,13 @@
         align-items: center;
         justify-content: space-evenly;
         flex-flow: wrap;
-
 }
 
 .about2 {
-    
     /* width: 500px;
     height: 400px; */
     width: 40%;
     height: 400px;
-    /* background-color: yellow; */
     margin: 20px 5px 20px 5px;
     box-sizing: border-box;
 
@@ -34,10 +34,9 @@
 .about3 {
     height: 400px;
     width: 40%;
-    /* background-color: tomato; */
-    /* margin: 0% 6% 0% 0% ; */
     box-sizing: border-box;
     padding: 40px 0px 20px 0px;
+    /* margin: 0% 6% 0% 0% ; */
 }
 
 @media screen and (max-width:1400px){
