He agregado mi area de social skills ademas de rediseñar el footer con el follow lo cual lo unifique para que este mas fino

--- a/src/css/aboutme.css
+++ b/src/css/aboutme.css
@@ -112,10 +112,10 @@
 }
 
 /* Agregando estilo a la lista desordenada */
-.ul{
+.About-ul{
     column-count: 2;
 }
-ul{
+.About-ul2, .About-ul3{
     list-style: none;
 }
 
