--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,29 +1,70 @@
 .footer {
-    /* background-color: rgb(32, 30, 30); */
-    height: 1000px;
-    display: grid;
-    grid-template-columns: auto auto auto auto;
+    background-color: rgb(10, 10, 10);
+    /* background-color: rgb(0, 0, 0); */
+    width: 100%;
+    height: 300px;
+}
+
+.botones-inicio{
+    width: 100%;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(8, 6, 6);
+}
+
+.btn-enlace{
+    width: 100px;
+    height: 30px;
+    color: rgba(255, 255, 255, 0.863);
+    background-color: rgb(8, 6, 6);
+    font-weight: bold;
+    cursor: pointer;
+    margin-left: 5px;
+    margin-right: 5px;
+    border: 1px solid rgb(8, 6, 6);
+}
+
+/* AREAA DE FOLLOW */
+
+.Follow-me{
+    width: 100%;
+    height: auto;
+    background-color: rgb(10, 10, 10);
+    margin-top: 40px;
+}
+
+.Follow-container{
+    width: 100%;
+    height: auto;
+    background-color: rgb(10, 10, 10);
+    display: flex;
     justify-content: center;
 }
 
-.footer-1 {
-    width: auto;
-    height: auto;
-    margin: 90px 90px 0px 90px;
-    color: aliceblue;
+.Follow-h1{
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
 }
 
-.footer-1 h3, a {
-    text-decoration: none;
-    display: flex;
-    margin-bottom: 10px;
-    line-height: 28px;
-    font-family: sans-serif;
+.Follow-p{
+    margin-top: 20px;
+    text-align: center;
+    margin-bottom: 45px;
 }
 
-.footer-1 a {
-    color: rgb(149, 156, 155);
-    font-size: 17px;
+.follow_icons{
+    width: 46px;
+    height: 46px;
+    border: 1px solid rgb(10, 10, 10);
+    margin-top: 15px;    
 }
 
-
+.foto_follow{
+    width: 20px;
+    height: 20px;
+    margin: 13px;
+   
+}
