He instalado una libreria AOS el cual me ayuda a aplicar efectos en las distintas secciones, lo intente hacer en JS puro, pero me ocurren errores raros y no estoy en la capacidad de resolverlos, pero se que lo lograre algun dia, con esto este portafolio ya no sera js puro, pero bueno esta nice los efectos

--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,3 +1,8 @@
+html{
+  /* No funciona con safari ni internet explorer  */
+  scroll-behavior: smooth;
+}
+
 nav{
   position: absolute;
   top: 0;
@@ -40,6 +45,7 @@ section{
   width: 100%;
   height: 100vh;
   background: url(../images/fondo5.jpg);
-  background-size: cover;
-  background-position: center
+  background-size: cover; /*cover; redimensiona la imagen para aseugrar que ocupa el máximo de pantalla posible. */
+  background-position: center;
+  background-attachment: fixed; /*Mantener fijo el fondo*/
 }
