--- a/src/css/aboutme.css
+++ b/src/css/aboutme.css
@@ -7,6 +7,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
 }
 
 .rayita-aboutme {
@@ -113,7 +114,11 @@
 
 /* Agregando estilo a la lista desordenada */
 .About-ul{
+    width: 100%;
+    height: auto;
     column-count: 2;
+    margin-left: -80px;
+    /* background-color: yellow; */
 }
 .About-ul2, .About-ul3{
     list-style: none;
