--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -14,8 +14,8 @@
 	padding-bottom: 20px;  
     padding-left: 30px; 
     color: white;
-    /* background-color: #0c0c0c; */
-background-color: rgb(95, 75, 75);
+    background-color: #0c0c0c;
+/* background-color: rgb(95, 75, 75); */
     /* justify-content: space-evenly; */
     /* justify-content: center; */
     /* flex-flow: wrap; */
@@ -29,6 +29,7 @@ background-color: rgb(95, 75, 75);
 
 .form-titulo{
     text-align: center;
+    margin-left: -30px;
 }
 
 input{
@@ -87,6 +88,7 @@ label{
     border: 1px solid orange;
     /* border-color: #97d848; */
     cursor: pointer;
+    line-height: 0px;
 }
 
 /* AGregando responsive design al boton */
