Añadi nuevos iconos en el footer ademas de darles funcionalidad para que direcciones a un determinado link social

--- a/src/css/Perfil.css
+++ b/src/css/Perfil.css
@@ -36,9 +36,9 @@
     overflow: hidden;
 }
 
-@keyframes typing {
+/* @keyframes typing {
     from {width: 0;}
-}
+} */
 
 .info2{
     color: white;
