--- a/src/css/aboutme.css
+++ b/src/css/aboutme.css
@@ -1,8 +1,8 @@
 /* ABOUT ME */
 .about {
     width: 100%;
-    height: 900px;
-    background-color: black;
+    height: 650px;
+    /* background-color: blue; */
     color: white;
     display: flex;
     align-items: center;
@@ -10,7 +10,23 @@
 
 }
 
-.rayita-aboutme {
+/* Aumentar la altura de la seccion about en mobil */
+@media screen and (max-width:500px){
+    .about{
+    height: 900px;
+    }
+}
+
+/* Titulo */
+.About-me{
+    font-size: 35px;
+    margin-top: 0px;
+}
+
+.rayita-aboutme{
+    margin-top: -30px;
+    display: flex;
+    justify-content: start;
     color: yellow;
 }
 
@@ -23,7 +39,7 @@
         justify-content: space-evenly;
         flex-flow: wrap;
 }
-/* Ajustar el contenido al 100% */
+/* Ajustar el contenido al 100% en movil*/
 @media screen and (max-width:500px){
     .caja{
         width: 100%;
@@ -31,11 +47,9 @@
 }
 
 .about2 {
-    /* width: 500px;
-    height: 400px; */
     width: 40%;
     height: auto;
-    margin: 60px 70px 20px 5px;
+    margin: 60px 70px 60px 5px;
     box-sizing: border-box; 
 }
 
@@ -43,20 +57,22 @@
     height: auto;
     width: 40%;
     box-sizing: border-box;
-    padding: 40px 0px 20px 0px;
     color: white;
     font-family: Verdana;
+    /* background-color: yellow; */
 }
-
-@media screen and (max-width:500px){
-    .about2{
-        margin: 70px 0px 0px 0px;
-    }
-}
-
+/* Ajustar el margen en la seccion about2 en mobiles */
 @media screen and (max-width:500px){
     .about3{
+        /* background-color: yellow; */
+        margin: 0px 0px -30px 0px;
         padding: 0px;
+    }
+}
+/* Ajustar el margen en la seccion about2 en mobiles */
+@media screen and (max-width:500px){
+    .about2{
+        margin: -90px 0px 10px 0px;
     }
 }
 
@@ -98,10 +114,6 @@
     transition: 1.5s;
 } */
 
-/* Titulo */
-.About-me{
-    font-size: 50px;
-}
 /* Nombre */
 .about-nombre{
     font-size: 20px;
@@ -109,7 +121,7 @@
 /* Informacion */
 .about-info{
     font-size: 14px;
-    margin: 15px 0px 0px 0px;
+    margin: 10px 0px -10px 0px;
 }
 
 /* Agregando estilo a la lista desordenada */
@@ -118,8 +130,17 @@
     height: auto;
     column-count: 2;
     margin-left: -80px;
+    margin-bottom: -10px;
     /* background-color: yellow; */
 }
+/* Ajustamos el margen de la seccion de botones */
+@media screen and (max-width:600px){
+    .About-ul{
+        margin-bottom: 0px;
+    }
+}
+
+
 .About-ul2, .About-ul3{
     list-style: none;
 }
@@ -160,3 +181,4 @@ li{
     font-weight: bold;
     line-height: 35px;
 }
+
