--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -60,12 +60,14 @@
     text-align: center;
     font-size: 20px;
     font-weight: bold;
+    color: white;
 }
 
 .Follow-p{
     margin-top: 20px;
     text-align: center;
     margin-bottom: 45px;
+    color: white;
 }
 
 .follow_icons{
