--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,7 +1,3 @@
-body{
-  width: 100%;
-  height: 720px;
-}
 
 *{
   margin: 0;
@@ -10,102 +6,79 @@ body{
   text-decoration: none;
 }
 
-nav{
-  height: 60px;
-  background: #34495e;
+:root{
+  --mainColor: #29335c;
+  --mainColorLight: #5767aa;
+  --secondaryColor: #082839;
+  --textColor: #eee;
 }
 
-nav .ul-nav{
-  float: right;
-  margin-right: 25px;
+header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 80px;
+  padding: 0 2rem;
+  background-color: black;
+  color: var(--textColor);
 }
 
-nav .ul-nav .li-nav{
-  display: inline-block;
-  line-height: 60px;
-  margin: 0 15px;
+nav a{
+  margin: 0 2rem;
+  color: var(--textColor);
+  text-decoration: none;
 }
 
-nav .ul-nav .li-nav a{
-  position: relative;
-  color: white;
-  font-size: 18px;
+nav a:hover{
+  color: var(--secondaryColor);
+}
+
+header .nav-btn{
   padding: 5px;
-  text-transform: uppercase
-  ;
-}
-
-nav .ul-nav .li-nav a:before{
-  position: absolute;
-  content: '';
-  left: 0;
-  bottom: 0;
-  height: 3px;
-  width: 100%;
-  background: white;
-  transform: scaleX(0);
-  transform-origin: right;
-  transition: transform .4s linear ;
-}
-
-nav .ul-nav .li-nav a:hover:before{
-  transform: scaleX(1);
-  transform-origin: left;
-}
-
-label #btn,
-label #cancel{
-  color: white;
-  font-size: 30px;
-  float: right;
-  line-height: 60px;
-  /* Para ajustar el margen del boton */
-  margin-right: 20px;
   cursor: pointer;
-  display: none;
+  background: transparent;
+  border: none;
+  outline: none;
+  color: var(--textColor);
+  visibility: hidden;
+  opacity: 0;
+  font-size: 1.8rem;
 }
 
-#check{
-  display: none;
-}
-
-@media (max-width: 944px) {
-  nav .ul-nav .li-nav a{
-    font-size: 17px;
+@media only screen and (max-width: 1024px){
+  header .nav-btn{
+    visibility: visible;
+    opacity: 1;
   }
-}
 
-@media (max-width: 860px) {
-  label #btn{
-    display: block;
-  }
-  .ul-nav{
+  header nav{
     position: fixed;
-    width: 412px;
-    height: 100vh;
-    background: #34495e;
-    top: 60px;
-    left: -100%;
-    text-align: center;
-    transition: all .5s;
-    padding-top: 100px;
-
-  }
-  nav .ul-nav .li-nav{
-    display: block;
-    margin: 75px 0;
-    line-height: 0px;
-  }
-  nav .ul-nav .li-nav a{
-    font-size: 20px;
-  }
-  #check:checked ~ .ul-nav{
+    top: 0;
     left: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5rem;
+    /* background-color: var(--mainColor); */
+    background-color: black;
+    transition: 1s;
+    transform: translateX(-100vh);
   }
-  #check:checked ~ label #btn{
-    display: none;
+
+  header .responsive_nav{
+    transform: none;
   }
-  #check:checked ~ label #cancel{
-    display: block;
+
+  nav .nav-close-btn{
+    position: absolute;
+    top: 1rem;
+    right: 2rem;
+  }
+
+  nav a{
+    font-size: 1.5rem;
   }
 }
