--- a/src/css/Perfil.css
+++ b/src/css/Perfil.css
@@ -1,21 +1,18 @@
 .principal {
     width : 100%;
-    height : 100%;
-    /* align-items: center; */
-    /* display: flex; */
-    /* justify-content: center; */
+    height : 100vh;
+    align-items: center;
+    display: flex;
+    justify-content: center;
     /* background-color: rgb(21, 21, 78); */
-    position: relative;
-    display: inline-block;
-    text-align: center;
+    /* position: relative; */
+    /* display: inline-block; */
 }
 
 .contenedor{
-    position: absolute;
-    text-align: center;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    background-color: blue;
+    min-width: 300px;
+    height: 500px;
 }
 
 .p{
