--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -1,6 +1,8 @@
 /* PROYEDTOS REALIZADOS */
 .main {
-    background-color: black;
+    /* background-color: black; */
+    width: 100%;
+    height: auto;
 }
 .titulo {
     text-align: center;
@@ -21,10 +23,11 @@
 .proyectos {
     width: 100%;
     height: 100%;
-    background-color: black;
+    /* background-color: black; */
     display: flex;
     align-items: center;
     color: white;
+    justify-content: center;
 }
 
 .proyectos-grid {
@@ -40,6 +43,35 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 17px;
+    margin-top: 17px;
+    margin-right: 17px;
+    margin-left: 17px;
+    margin-bottom: 17px;
+
     background-color: rgb(6, 11, 87);
+}
+
+@media screen and (max-width:420px){
+    .proyectos{
+        width: 98%;
+        margin-left: 1px;
+        margin-right: 1px;
+        /* background-color: peru; */
+    }
+}
+
+/* Samsung Galaxy a51-71 responsive */
+@media screen and (max-width:420px){
+    .proyecto{
+        width: 100%;
+        margin: 0px 0px 10px 0px;
+    }
+}
+
+/* Iphone 12 pro responsive */
+@media screen and (max-width:390px){
+    .proyecto{
+        width: 95%;
+        margin-left: -15px;
+    }
 }
