--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,3 +1,19 @@
+.filtro{
+  width: 100%;
+  height: 100vh;
+  background-color: #01020288;
+  position: absolute;
+}
+
+.NavBar{
+  background-image: url(../images/fondo4.jpg);
+  width: 100%;
+  height: 100vh;
+  background-size: cover; /*cover; redimensiona la imagen para aseugrar que ocupa el máximo de pantalla posible. */
+  background-position: center;
+  background-attachment: fixed; /*Mantener fijo el fondo*/
+  position: relative;
+}
 
 *{
   margin: 0;
@@ -19,7 +35,7 @@ header{
   justify-content: space-between;
   height: 80px;
   padding: 0 2rem;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0);
   color: var(--textColor);
 }
 
