--- a/src/css/aboutme.css
+++ b/src/css/aboutme.css
@@ -83,7 +83,7 @@
     }
 }
 
-@media screen and (max-width:1400px){
+@media screen and (max-width:1920px){
     .about2, .about3{
         width:40%;
     }
@@ -108,18 +108,10 @@
 }
 
 .foto2 {
-    
-    width: 100%;
-    height: 100%;
-    /* border-radius: 100%; */
+    width: 90%;
+    height: 90%;
+    border-radius: 100%;
 }
-
-/* .foto2:hover{
-    transform: translateY(-50px);
-    width: 500px;
-    height: 350px;
-    transition: 1.5s;
-} */
 
 /* Nombre */
 .about-nombre{
