--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -1,7 +1,16 @@
 .Contact-base{
     width: 100%;
-    height: auto;
-    background-color: rgb(0, 0, 0);
+    height: 100vh;
+    background-color: rgb(0, 4, 18);
+    padding-top: 1%;
+}
+
+/* Ajustamos la altura y el margin-top en moviles */
+@media screen and (max-width:600px){
+    .Contact-base{
+        height: auto;
+        margin-bottom: -5%;
+    }
 }
 
 .formulario{
@@ -9,7 +18,7 @@
     /* align-items: center; */
 	width: 450px; 
     height: auto;
-    margin: 80px auto;
+    margin: 5% auto;
 	padding-top: 30px;
 	padding-bottom: 20px;  
     padding-left: 30px; 
@@ -128,32 +137,3 @@ label{
     outline:0;
     border: 1px solid #97d848;
 }
-   
-
-/* .Contact-container{
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;--
-    justify-content: center;
-    flex-flow: wrap;
-    color: white;
-    background-color: rgb(82, 14, 82);
-} */
-
-/* .form-info{
-    height: 400px;
-    width: 30%;
-    box-sizing: border-box;
-    margin: 40px 0px 40px 0px;
-    background-color: red;
-} */
-
-/* 
-.formulario{
-    height: 400px;
-    width: 45%;----
-    width: 87%;
-    box-sizing: border-box;
-    margin: 40px 0px 40px 0px;
-    background-color: yellow;---
-} */
