--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,6 +1,6 @@
 .footer {
-    background-color: rgb(10, 10, 10);
-    /* background-color: rgb(0, 0, 0); */
+    /* background-color: rgb(10, 10, 10); */
+    background-color: rgb(0, 4, 18);
     width: 100%;
     height: 300px;
 }
@@ -11,7 +11,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(8, 6, 6);
+    /* background-color: rgb(8, 6, 6); */
+    background-color: rgb(0, 4, 18);
 }
 
 .btn-enlace{
@@ -19,7 +20,8 @@
     height: 30px;
     color: rgba(255, 255, 255, 0.863);
     text-decoration: none;
-    background-color: rgb(8, 6, 6);
+    /* background-color: rgb(8, 6, 6); */
+    background-color: rgb(0, 4, 18);
     font-weight: bold;
     font-size: 15px;
     cursor: pointer;
@@ -29,7 +31,8 @@
     justify-content: center;
     align-items: center;
     margin-right: 5px;
-    border: 1px solid rgb(8, 6, 6);
+    /* border: 1px solid rgb(8, 6, 6); */
+    border: 1px solid rgb(0, 4, 18);
 }
 
 @media screen and (max-width:500px){
@@ -44,14 +47,17 @@
 .Follow-me{
     width: 100%;
     height: auto;
-    background-color: rgb(10, 10, 10);
+    /* background-color: rgb(10, 10, 10); */
+    background-color: rgb(0, 4, 18);
+
     margin-top: 40px;
 }
 
 .Follow-container{
     width: 100%;
     height: auto;
-    background-color: rgb(10, 10, 10);
+    /* background-color: rgb(10, 10, 10); */
+    background-color: rgb(0, 4, 18);
     display: flex;
     justify-content: center;
 }
@@ -73,7 +79,8 @@
 .follow_icons{
     width: 46px;
     height: 46px;
-    border: 1px solid rgb(10, 10, 10);
+    /* border: 1px solid rgb(10, 10, 10); */
+    border: 1px solid rgb(0, 4, 18);
     margin-top: 15px;    
 }
 
