--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -3,11 +3,14 @@
     /* background-color: black; */
     width: 100%;
     height: auto;
+    background-color: rgb(0, 4, 14);
+    padding-top: 0;
 }
 .titulo {
     text-align: center;
     color: white;
     font-weight: 900;
+    padding-top: 5%;
 }
 
 .u {
