--- a/src/css/skills.css
+++ b/src/css/skills.css
@@ -1,10 +1,24 @@
+.main-skill{
+    width: 100%;
+    height:110vh;
+    background-color: rgb(0, 4, 18);
+}
+
+.title-skill{
+    text-align: center;
+    color: white;
+    font-weight: 900;
+    padding-top: 5%;
+}
+
 .Skills-body{
     /* ancho y altura automatica */
     width: 100%;
-    height:700px;
-    /* background-color: yellow; */
     /* centrando el contenido */
-    margin: 15% 0% 15% 0%;
+    margin: 5% 0% 15% 0%;
+    display: flex;
+    align-items: center;
+
 }
 
 /* Disminuir el margen de los skills */
@@ -14,18 +28,28 @@
     }
 }
 
+/* Añadimos un margen-top en movil */
+@media screen and (max-width:500px){
+    .caja-skill{
+    margin-top: 20px;
+    }
+}
 
 .caja-skill{
     display: flex;
-    align-items: center;
     justify-content: space-evenly;
     flex-flow: wrap;
     color: white;
-    padding-top: 30px;
+}
+
+.info-skill1{
+    /* text-align: center; */
+    font-size: 14px;
+
 }
 
 .body-h1 {
-    text-align: start;
+    text-align: center;
     color: white;
 }
 
@@ -33,8 +57,9 @@
     margin-top: -16px;
     margin-bottom: 15px;
     display: flex;
-    justify-content: start;
+    justify-content: center;
     color: yellow;
+    padding-bottom: 5%;
 }
 
 /* .body-h3 {
