Mejore la seccion de los proyectos con un hover, agregue  botones dinamicos con efectos css son sus iconos de react

--- a/src/css/Perfil.css
+++ b/src/css/Perfil.css
@@ -39,12 +39,6 @@
     font-family: Verdana;
     font-size: 70px;
     margin-right: 15px;
-    /* display: block; */
-    /* white-space: nowrap; */
-    /* border-right: 4px solid; */
-    /* width: 19ch; */
-    /* animation: typing 4s; */
-    /* overflow: hidden; */
 }
 
 .nombre2{
@@ -53,9 +47,11 @@
     color: chocolate;
 }
 
-/* @keyframes typing {
-    from {width: 0;}
-} */
+@media screen and (max-width:412px){
+    .cont-nombre{
+        flex-direction: column;
+    }
+}
 
 .info2{
     color: white;
