--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap');
+
 .filtro{
   width: 100%;
   height: 100vh;
@@ -13,7 +15,7 @@
   background-position: center;
   /* background-attachment: fixed; Mantener fijo el fondo */
   position: relative;
-  z-index: 3;  /* Mandamos encima de todo la Navbar horizontal en la capa 2 */
+  z-index: 5;  /* Mandamos encima de todo la Navbar horizontal en la capa 2 */
 }
 
 *{
@@ -101,3 +103,62 @@ header .nav-btn{
     font-size: 1.5rem;
   }
 }
+
+/* Añadiendo efecto al logo de la NavBar */
+.spinner {
+  /* height: 50px; */
+  margin-top: 10px;
+  font-size: 18px;
+  font-weight: 600;
+  font-family: 'Mochiy Pop One', sans-serif;
+  letter-spacing: 0.3em;
+  color: #affaff;
+  filter: drop-shadow(0 0 10px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ }
+ 
+ @media screen and (max-width:500px){
+  .spinner{
+    margin-top: -8px;
+  }
+}
+ /* Tiempo de la animacion */
+ .spinner span {
+  animation: loading6454 3s ease infinite;
+ }
+ 
+ .spinner span:nth-child(2) {
+  animation-delay: 0.25s;
+ }
+ 
+ .spinner span:nth-child(3) {
+  animation-delay: 0.5s;
+ }
+ 
+ .spinner span:nth-child(4) {
+  animation-delay: 0.75s;
+ }
+ 
+ .spinner span:nth-child(5) {
+  animation-delay: 1s;
+ }
+ 
+ .spinner span:nth-child(6) {
+  animation-delay: 1.25s;
+ }
+ 
+ .spinner span:nth-child(7) {
+  animation-delay: 1.5s;
+ }
+ 
+ @keyframes loading6454 {
+  0%, 100% {
+   transform: translateX(10px);
+  }
+ 
+  70% {
+   transform: translateX(0px);
+  }
+ }
