Agregue efectos hover a los botones del footer, asi como agregar un efecto fade en la seccion de perfil al scrollear

--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -5,7 +5,8 @@
   height: 100vh;
   background-color: #01020288;
   position: absolute;
-}
+  /* Sombreado entre contenedores */
+  background: linear-gradient(rgba(148, 255, 26, 0) 95%, rgb(0, 4, 14));}
 
 .NavBar{
   background-image: url(../images/fondo4.jpg);
