--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -3,10 +3,13 @@
 .filtro{
   width: 100%;
   height: 100vh;
-  background-color: #01020288;
-  position: absolute;
+  /* background-color: #01020288; */
   /* Sombreado entre contenedores */
-  background: linear-gradient(rgba(148, 255, 26, 0) 95%, rgb(0, 4, 14));}
+  /* background: linear-gradient(rgba(148, 255, 26, 0) 95%, rgb(0, 4, 14)); */
+  background: rgb(2,0,36);
+  background: linear-gradient(0deg, rgb(0, 0, 0) 0%, rgba(0,0,0,0) 10%, rgba(0, 0, 0, 0) 100%);
+
+}
 
 .NavBar{
   background-image: url(../images/fondo4.jpg);
