--- a/src/css/aboutme.css
+++ b/src/css/aboutme.css
@@ -2,13 +2,18 @@
 .about {
     width: 100%;
     height: 110vh;
-    background-color: rgb(0, 4, 14);
     color: white;
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
-    z-index: 1 /* Mandamos atras el about en la capa 3 */
+    z-index: 1; /* Mandamos atras el about en la capa 3 */
+
+    background: linear-gradient(rgba(5, 7, 12, 0.623) , rgba(5, 7, 12, 0.616)),
+    url(../images/fondo7.jpg) no-repeat center center;
+    min-height: 110vh;
+    background-size: cover; /*cover; redimensiona la imagen para aseugrar que ocupa el máximo de pantalla posible. */
+    margin-top: 20%;
 }
 
 /* Aumentar la altura de la seccion about en mobil */
@@ -16,6 +21,12 @@
     .about{
     height: 900px;
     }
+}
+
+/* Filtro top y bottom de efecto desvanecimiento*/
+.filtro-about{
+    height: 110vh;
+    background: linear-gradient(0deg, rgb(0, 0, 0) 0%, rgba(0, 208, 250, 0) 15%, rgba(64, 192, 218, 0) 85%, rgba(0,0,0,1) 100%);
 }
 
 /* Titulo */
@@ -38,16 +49,19 @@
 
 .caja {
         /* background-color: rgb(14, 14, 15); */
-        width: 87%;
-        display: flex;
-        align-items: center;
-        justify-content: space-evenly;
-        flex-flow: wrap;
+    width: 87%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-flow: wrap;
+
+    padding-top: 5%;        
 }
 /* Ajustar el contenido al 100% en movil*/
 @media screen and (max-width:500px){
     .caja{
         width: 100%;
+        padding-top: 45%;        
     }
 }
 
@@ -121,6 +135,7 @@
     /* background-color: yellow; */
     font-size: 14px;
     margin: 10px 0px -10px 0px;
+    color: rgba(255, 255, 255, 0.822);
 }
 
 /* Agregando estilo a la lista desordenada */
