--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -1,8 +1,14 @@
 .Contact-base{
     width: 100%;
-    height: 100vh;
+    height: 110vh;
     background-color: rgb(0, 4, 18);
-    padding-top: 1%;
+    /* padding-top: 1%; */
+
+    
+    background: linear-gradient(rgba(5, 7, 12, 0.623) , rgba(5, 7, 12, 0.616)),
+    url(../images/fondo6.jpg) no-repeat center center;
+    background-size: cover; /*cover; redimensiona la imagen para aseugrar que ocupa el máximo de pantalla posible. */
+    margin-top: 20%;
 }
 
 /* Ajustamos la altura y el margin-top en moviles */
@@ -13,26 +19,48 @@
     }
 }
 
+/* Filtro top y bottom de efecto desvanecimiento*/
+.filtro-contact{
+    height: 110vh;
+    background: linear-gradient(0deg, rgb(0, 0, 0) 0%, rgba(0, 208, 250, 0) 15%, rgba(64, 192, 218, 0) 85%, rgba(0,0,0,1) 100%);
+}
+
+.container-form{
+    width: 30%;
+    height: 100vh;
+    margin-left: 30%;
+    padding-top: 1px;
+}
+
+@media screen and (max-width:600px){
+    .container-form{
+        width: 100%;
+        /* height: 100vh; */
+        margin-left: 0%;
+        padding-top: 30%;
+    }
+}
+
 .formulario{
-    /* display: flex; */
-    /* align-items: center; */
 	width: 450px; 
     height: auto;
     margin: 5% auto;
+    margin-top: 25%;
 	padding-top: 30px;
 	padding-bottom: 20px;  
     padding-left: 30px; 
     color: white;
-    background-color: #0c0c0c;
-/* background-color: rgb(95, 75, 75); */
-    /* justify-content: space-evenly; */
-    /* justify-content: center; */
-    /* flex-flow: wrap; */
+    background-color: #000000b4;
+    -webkit-box-shadow: 0px 0px 21px 22px #000000b4; 
+    box-shadow: 0px 0px 21px 22px #000000b4;
+    border-radius: 30px;
 }
 /* Añadimos responsive al formulario */
 @media screen and (max-width:600px){
     .formulario{
-        width:382px;
+        width:360px;
+	    padding-left: 15px;
+        padding-right: 10px;
     }
 }
 
@@ -42,14 +70,14 @@
 }
 
 input{
-	background-color: #000000; 
+	background-color: #0c0c0cbe; 
     color: white;
 	width: 408px; 
 	height: 40px; 
 	border-radius: 5px;  
 	/* border-style: solid;  */
 	border-width: 1px; 
-	border-color: #000000; 
+	border-color: #0c0c0cbe; 
 	margin-top: 10px;  
 	padding-left: 10px;
     margin-bottom: 20px;
@@ -64,7 +92,7 @@ input{
 }
 
 textarea{
-    background-color: #050505;
+    background-color: #0c0c0cbe;
     color: white;
       width: 405px;
       height: 80px; 
@@ -90,11 +118,11 @@ label{
 	padding-right: 5px; 	
 	margin-bottom: 20px; 
 	margin-top: 10px; 	
-    background-color: orange;
+    background-color: rgba(255, 166, 0, 0.788);
     /* border: 1px solid orange; */
 	/* border-style: solid; */
 	border-radius: 10px;
-    border: 1px solid orange;
+    border: 1px solid rgba(255, 166, 0, 0.788);
     /* border-color: #97d848; */
     cursor: pointer;
     line-height: 0px;
