--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -5,7 +5,20 @@
     height: auto;
     background-color: rgb(0, 4, 14);
     padding-top: 0;
+
+    background: linear-gradient(rgba(5, 7, 12, 0.623) , rgba(5, 7, 12, 0.616)),
+    url(../images/fondo.jpg) no-repeat center center;
+    background-size: cover; /*cover; redimensiona la imagen para aseugrar que ocupa el máximo de pantalla posible. */
+    margin-top: 20%;
 }
+
+/* Filtro top y bottom de efecto desvanecimiento*/
+.filtro-projects{
+    width: 100%;
+    height: auto; /* esclusivo para projects */
+    background: linear-gradient(0deg, rgb(0, 0, 0) 0%, rgba(0, 208, 250, 0) 15%, rgba(64, 192, 218, 0) 85%, rgba(0,0,0,1) 100%);
+}
+
 .titulo {
     text-align: center;
     color: white;
