--- a/src/css/skills.css
+++ b/src/css/skills.css
@@ -2,6 +2,17 @@
     width: 100%;
     height:110vh;
     background-color: rgb(0, 4, 18);
+
+    background: linear-gradient(rgba(5, 7, 12, 0.459) , rgba(5, 7, 12, 0.616)),
+    url(../images/fondo8.jpg) no-repeat center center;
+    background-size: cover; /*cover; redimensiona la imagen para aseugrar que ocupa el máximo de pantalla posible. */
+    margin-top: 20%;
+}
+
+/* filtro top y bottom efecto desvanecimiento */
+.filtro-skills{
+    height: 110vh;
+    background: linear-gradient(0deg, rgb(0, 0, 0) 0%, rgba(0, 208, 250, 0) 15%, rgba(0, 213, 255, 0) 85%, rgba(0,0,0,1) 100%);
 }
 
 .title-skill{
